textfields are now required to be filled

--- a/public/catalog.css
+++ b/public/catalog.css
@@ -45,3 +45,14 @@ body {
 .card {
     margin-bottom: 20px;
 }
+.modal-dialog-centered {
+    display: flex;
+    align-items: center;
+    min-height: calc(100% - 1rem);
+}
+
+.modal-dialog-centered::before {
+    display: block;
+    height: calc(100vh - 1rem);
+    content: "";
+}
